tests/paczka1/fuzzy1/79734885.err
Error in line 2: 2STkOd31ig S423 20I,4
Error in line 4: 2STkOd31ig S923 70,16
Error in line 1: 2STkOd31ig S423 77,0
Error in line 6: S816 S505 33,8
Error in line 7: S816 S923 66,4
Error in line 5: 2STkOd31ig S923 48,7
Error in line 27: 2STkOd31ig S923 90,4
Error in line 38: S816 S505 70,5
